--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ react-app
 .terraform/
 *.tfstate
 *.tfstate.*
+
+# Elastic Beanstalk Files
+#.elasticbeanstalk/*
+#!.elasticbeanstalk/*.cfg.yml
+#!.elasticbeanstalk/*.global.yml
