--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@ react-app
 .terraform/
 *.tfstate
 *.tfstate.*
+
 main
+
+# Elastic Beanstalk Files
+#.elasticbeanstalk/*
+#!.elasticbeanstalk/*.cfg.yml
+#!.elasticbeanstalk/*.global.yml
